Mon Jan  7 15:24:10 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (rb_threadptr_exec_event_hooks_orig): pop tag before
	  JUMP_TAG() if frame is `finish' frame.
	  Without this patch, there is an inconsistency between control
	  frame stack and tags stack.
	  [Bug #7668]

	* test/ruby/test_settracefunc.rb: add a test for above.

Mon Jan  7 15:21:48 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* Makefile.in, common.mk (fake, yes-fake, no-make): these dependecies
	  are not platform dependent.

	* win32/Makefile.sub ($(arch)-fake.rb): workaround.

Mon Jan  7 12:09:24 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_callee_setup_arg_complex, vm_yield_setup_block_args):
	  set keyrest hash after making rest array, so that the last element
	  will not be overwritten.  [ruby-core:51278] [Bug #7665]

Mon Jan  7 09:37:24 2013  Koichi Sasada  <ko1@atdot.net>

	* NEWS: add a NEWS entry about RubyVM.

Sun Jan  6 19:06:57 2013  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* win32/Makefile.sub: Fix build with VC.
	  Patch by Charlie Savage. Fixes [ruby-core:51261]

Sun Jan  6 18:43:48 2013  Yuki Yugui Sonoda  <yugui@yugui.jp>

	* bootstraptest/test_io.rb: add a test for [ruby-dev:46834].

	* io.c (rb_cloexec_fcntl_dupfd) Use an emulation with dup(2) when
	  fcntl(2) and/or F_DUPFD is unavailable.
	  Suggested by akr.

	* configure.in (HAVE_FCNTL): NativeClient does not provide fcntl(2).

Sun Jan  6 11:11:26 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/modules_and_classes.rdoc:  Fixed typo.

Sun Jan  6 05:35:18 2013  Eric Hodel  <drbrain@segment7.net>

	* doc/syntax/modules_and_classes.rdoc:  Added singleton classes
	  documentation.

Sun Jan  6 02:22:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/webrick/httpservlet/abstract.rb (WEBrick::HTTPServlet): Typo in
	  example. Patch by shlensky [Fixes #232 on github]

Sat Jan  5 21:15:10 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http/generic_request.rb: