@@ -1,3 +1,7 @@
+Mon Jan  7 15:31:58 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* parse.y (f_kwrest): reject duplicated kwrest argument name.
+
 Mon Jan  7 15:24:10 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* vm_trace.c (rb_threadptr_exec_event_hooks_orig): pop tag before
